[package]
name = "checker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
serde-json-core-fmt = "0.1.1"

[patch.crates-io]
radium = { git = "https://github.com/mystor/radium.git", branch = "feature/3" }