[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm-core = "0.7"
risc0-zkvm-host = "0.7"
risc0-zkvm-serde = "0.7"
tempfile = "3.3"
checker-core = { path = "../core" }
signature_bls = { version = "0.35.0" , default-features = false }
sha2 = "0.10"
rand = "0.8.0"

[patch.crates-io]
radium = { git = "https://github.com/mystor/radium.git", branch = "feature/3" }